XMLtoCSV/objects/unpackaged/objects/PCYC_Patient_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_First_Line_Therapy__c</fullName>
        <label>First line therapy</label>
        <picklist>
            <picklistValues>
                <fullName>FCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imbruvica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Imbruvica_Experience__c</fullName>
        <label>Imbruvica Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Imbruvica_Position__c</fullName>
        <label>Likely Imbruvica Position</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Indication__c</fullName>
        <label>Indication</label>
        <picklist>
            <picklistValues>
                <fullName>CLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Master_Patient_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This refers the original patient tracker</inlineHelpText>
        <label>Master Patient Tracker</label>
        <referenceTo>PCYC_Patient_Tracker__c</referenceTo>
        <relationshipLabel>Patient Tracker</relationshipLabel>
        <relationshipName>pcyc_patient_tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Mid_Level__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mid Level</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Tracker (Mid Level)</relationshipLabel>
        <relationshipName>pcyc_patient_tracker_mid_level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Next_Followup_Date__c</fullName>
        <label>Next Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Parent HCO of Prescriber</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Tracker</relationshipLabel>
        <relationshipName>pcyc_patient_tracker_organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Patient_Age__c</fullName>
        <label>Patient Age</label>
        <picklist>
            <picklistValues>
                <fullName>Above 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Patient_Sex__c</fullName>
        <label>Patient Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Patient_Status__c</fullName>
        <label>Patient Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not on treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On treatment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Patient_Treatement__c</fullName>
        <label>Patient treated in past 12 months</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Primary_Physician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Physician</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Tracker (Primary Physician)</relationshipLabel>
        <relationshipName>pcyc_patient_tracker_primary_physician</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Second_Line_Therapy__c</fullName>
        <label>Second Line Therapy</label>
        <picklist>
            <picklistValues>
                <fullName>FCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imbruvica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zydelig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rituxan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Secondary_Physician__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Secondary Physician</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Tracker (Secondary Physician)</relationshipLabel>
        <relationshipName>pcyc_patient_tracker_secondary_physician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Treatment_Start_Date__c</fullName>
        <label>Start date on current treatment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_barriers__c</fullName>
        <label>Barriers</label>
        <picklist>
            <picklistValues>
                <fullName>Patient Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_currently_on_Imbruvica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently on Imbruvica</label>
        <type>Checkbox</type>
    </fields>
    <label>Patient Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Patient_List</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Indication__c</columns>
        <columns>PCYC_Primary_Physician__c</columns>
        <columns>PCYC_Secondary_Physician__c</columns>
        <columns>PCYC_Mid_Level__c</columns>
        <columns>PCYC_Patient_Treatement__c</columns>
        <columns>PCYC_First_Line_Therapy__c</columns>
        <columns>PCYC_Second_Line_Therapy__c</columns>
        <columns>PCYC_Patient_Sex__c</columns>
        <columns>PCYC_Patient_Age__c</columns>
        <columns>PCYC_Patient_Status__c</columns>
        <columns>PCYC_Treatment_Start_Date__c</columns>
        <columns>PCYC_Next_Followup_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Patient List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Patient_Tracker</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Indication__c</columns>
        <columns>PCYC_Primary_Physician__c</columns>
        <columns>PCYC_Secondary_Physician__c</columns>
        <columns>PCYC_Mid_Level__c</columns>
        <columns>PCYC_Patient_Treatement__c</columns>
        <columns>PCYC_First_Line_Therapy__c</columns>
        <columns>PCYC_Second_Line_Therapy__c</columns>
        <columns>PCYC_Patient_Sex__c</columns>
        <columns>PCYC_Patient_Age__c</columns>
        <columns>PCYC_Patient_Status__c</columns>
        <columns>PCYC_Treatment_Start_Date__c</columns>
        <columns>PCYC_Next_Followup_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Patient Tracker</label>
        <language>en_US</language>
        <sharedTo>
            <group>MSL</group>
            <group>Sales</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PPT-{0}</displayFormat>
        <label>Patient Tracker #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Tracker</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>